--- a/app/src/main/res/layout/fragment_sub_dm_invites.xml
+++ b/app/src/main/res/layout/fragment_sub_dm_invites.xml
@@ -6,9 +6,10 @@
     android:layout_height="match_parent"
     android:background="@color/black"
     android:padding="10dp"
-    tools:context=".FragmentSubDmInvites">
+    tools:context=".view.FragmentSubDmInvites">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,4 +42,25 @@
             app:layout_constraintTop_toTopOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <TextView
+        android:id="@+id/DmInvites_Status"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:gravity="center"
+        android:text="Status waiting"
+        android:textAlignment="center"
+        android:textColor="#969696"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/DmInvites_RecyclerView" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/DmInvites_RecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/constraintLayout4" />
 </androidx.constraintlayout.widget.ConstraintLayout>
