--- a/app/src/main/res/drawable/style_main_bottombar.xml
+++ b/app/src/main/res/drawable/style_main_bottombar.xml
@@ -4,10 +4,10 @@
         <shape android:shape="rectangle">
             <solid android:color="#202020" />
             <corners android:topLeftRadius="15dp" android:topRightRadius="15dp" />
-            <padding android:top="5dp" android:bottom="5dp"/>
+            <padding android:bottom="5dp" android:top="5dp" />
         </shape>
     </item>
-    <item android:color="#505050" android:state_checked="false">
+    <item android:color="#646464" android:state_checked="false">
         <shape android:shape="rectangle">
             <solid android:color="#101010" />
             <corners android:topLeftRadius="15dp" android:topRightRadius="15dp" />
