--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -5,6 +5,7 @@
     android:id="@+id/chat"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:paddingTop="50dp"
     tools:context=".view.ActivityAuth">
 
     <TextView
@@ -22,6 +23,8 @@
         android:id="@+id/auth_frame"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginBottom="32dp"
         app:layout_constraintBottom_toTopOf="@+id/auth_bottombar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,11 +32,12 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/auth_bottombar"
-        android:background="@color/black"
-        app:itemTextColor="@color/white"
-        app:itemIconTint="@color/white"
+        style="@style/Widget.MaterialComponents.BottomNavigationView.PrimarySurface"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/black"
+        app:itemIconTint="@drawable/style_auth_bottombar"
+        app:itemTextColor="@drawable/style_auth_bottombar"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
