--- a/app/src/main/res/layout/fragment_auth_login.xml
+++ b/app/src/main/res/layout/fragment_auth_login.xml
@@ -103,6 +103,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="#151515"
+                android:textColor="@color/white"
                 android:text="Login"
                 android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
