--- a/app/src/main/res/layout/fragment_auth_sign_up.xml
+++ b/app/src/main/res/layout/fragment_auth_sign_up.xml
@@ -125,6 +125,7 @@
                 android:layout_height="50dp" />
 
             <Button
+                android:textColor="@color/white"
                 android:id="@+id/AuthSignUpButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
