--- a/app/src/main/res/layout/fragment_sub_dm_invites.xml
+++ b/app/src/main/res/layout/fragment_sub_dm_invites.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/black"
-    android:padding="10dp"
+    android:paddingHorizontal="10dp"
     tools:context=".view.FragmentSubDmInvites">
 
     <androidx.constraintlayout.widget.ConstraintLayout
