--- a/app/src/main/res/layout/item_card_course.xml
+++ b/app/src/main/res/layout/item_card_course.xml
@@ -47,7 +47,7 @@
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
+            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/item_Course_description">
