--- a/app/src/main/res/layout/item_row_message.xml
+++ b/app/src/main/res/layout/item_row_message.xml
@@ -1,25 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="3dp"
-    android:background="#202020"
-    android:orientation="vertical"
-    android:padding="10dp">
+    android:layout_marginVertical="5dp"
+    app:cardBackgroundColor="#252525"
+    app:cardCornerRadius="16dp">
 
-    <TextView
-        android:id="@+id/item_msg_sender"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sender"
-        android:textSize="20sp" />
+        android:layout_margin="3dp"
+        android:orientation="vertical"
+        android:padding="8dp">
 
-    <TextView
-        android:id="@+id/item_msg_text"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Text"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/item_msg_sender"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Sender"
+            android:textSize="20sp" />
 
-</LinearLayout>
+        <TextView
+            android:id="@+id/item_msg_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Text"
+            android:textSize="18sp" />
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
